base/infrastructure/tailscale/egress/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-egress
  namespace: infrastructure
spec:
  type: ExternalName
  externalName: vaultwarden.production.svc.cluster.local
  ports:
    - name: http
      port: 80
      protocol: TCP
